Working version of alter table command